# memU

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  AUTO_PUBLISH_WORKFLOW.md  CHANGELOG.md  CHANGELOG_ENDSESSION.md  CODE_OF_CONDUCT.md  CONFIG_GUIDE.md  CONTRIBUTING.md  CONVERSATION_ANALYSIS_README.md  Cargo.toml  DATABASE.MD  DEEPSEEK_INTEGRATION.md  DELETE_MEMORY_IMPLEMENTATION.md  DOCKER_QUICK_START.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.frontend  EVENT_DRIVEN_IMPLEMENTATION.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALL-LATEST.md  LICENSE  LICENSE_FIX_SUMMARY.md  LLM_UPGRADE.md  MANIFEST.in  Makefile  PROFILE_UPDATE_FEATURES.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_RELEASE_SUMMARY.md  PYPI_RELEASE_GUIDE.md  PersonaLab_Data_Format.md  QUICK_START_SDK.md  README.ar.md  README.de.md  (+65 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: API_REFERENCE.md  EMBEDDING_PROVIDERS.md  HACKATHON_ISSUE_DRAFT.md  HACKATHON_MAD_COMBOS.md  MEMORY_DATABASE_SCHEMA.md  META_AGENT_SYSTEM.md  MIGRATION_GUIDE.md  OPENAI_SETUP.md  PERSONA_OPTIONS.md  POSTGRESQL_MIGRATION.md  POSTGRESQL_SETUP.md  SDK.md  SERVICE_API.md  USER_AGENT_SUPPORT.md  architecture.md  claude-provider.md  folder_memory_compiler.md  gemini_provider.md  index.md  langgraph_integration.md  memory_policy_appendix.md  milvus.md  mssql.md  multi-provider-guide.md  mysql-integration.md  oracle_integration.md  oracle_provider.md  remote_api_guide.md  sealos-devbox-guide.md  sealos_use_case.md  sqlite.md
example/: .gitignore  TODO_LIST_Wu  example_conversation.json  generate_example.py  memorize_example.py  openai_chat_example.py  sdk_example.py  simple_memory_example.py  simple_recall_example.py
examples/: 01_basic_memory.py  01_quick_start.py  02_conversation_recording.py  02_memory_basics.py  03_conversation_retrieval.py  03_semantic_search.py  04_feature_combinations.py  (+72 more)
(+1442 files in other folders)
