[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalab"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A Python framework for creating and managing AI personas and laboratory environments"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ai", "personas", "laboratory", "framework", "python"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "twine>=4.0",
    "build>=0.10",
]

[project.urls]
"Homepage" = "https://github.com/NevaMind-AI/PersonaLab"
"Bug Tracker" = "https://github.com/NevaMind-AI/PersonaLab/issues"
"Documentation" = "https://github.com/NevaMind-AI/PersonaLab#readme"

[project.scripts]
# your-cli-command = "your_package.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["personalab*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=personalab --cov-report=term-missing --cov-report=html" 